# opengpts

backend/: Makefile  pyproject.toml
backend/app/: agent.py  server.py  upload.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/components/: Layout.tsx
